{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 236,
  "lineage": "f745e257-b7c6-df9a-3f25-4897f089d36d",
  "resources": [
    {
      "module": "module.eksvpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0e7ff1871a1517b21",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-236-40-50.compute-1.amazonaws.com",
            "public_ip": "34.236.40.50",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc-us-east-1a",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0f1beaefbb5a7529d",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-204-207-205.compute-1.amazonaws.com",
            "public_ip": "54.204.207.205",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc-us-east-1b",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0ce7de8210769228f",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-55-76-29.compute-1.amazonaws.com",
            "public_ip": "52.55.76.29",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc-us-east-1c",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.eksvpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:341422841066:internet-gateway/igw-0037607194e8ef441",
            "id": "igw-0037607194e8ef441",
            "owner_id": "341422841066",
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cbd7b0146f9cba0d"
          },
          "dependencies": [
            "module.eksvpc.aws_vpc.this",
            "module.eksvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eksvpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e7ff1871a1517b21",
            "id": "nat-0df5fb4aea79ae659",
            "network_interface_id": "eni-0cf381b3be71c0b66",
            "private_ip": "10.0.101.40",
            "public_ip": "34.236.40.50",
            "subnet_id": "subnet-0f0f9342285f1f04f",
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc-us-east-1a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.eksvpc.aws_eip.nat",
            "module.eksvpc.aws_internet_gateway.this",
            "module.eksvpc.aws_subnet.public",
            "module.eksvpc.aws_vpc.this",
            "module.eksvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f1beaefbb5a7529d",
            "id": "nat-0c96376bc0a4b9365",
            "network_interface_id": "eni-02c4a48f658f2011b",
            "private_ip": "10.0.102.22",
            "public_ip": "54.204.207.205",
            "subnet_id": "subnet-012a957bce57a129f",
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc-us-east-1b",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.eksvpc.aws_eip.nat",
            "module.eksvpc.aws_internet_gateway.this",
            "module.eksvpc.aws_subnet.public",
            "module.eksvpc.aws_vpc.this",
            "module.eksvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ce7de8210769228f",
            "id": "nat-016154091dc5cd761",
            "network_interface_id": "eni-04bc0295711e15046",
            "private_ip": "10.0.103.185",
            "public_ip": "52.55.76.29",
            "subnet_id": "subnet-07376e489f24819db",
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc-us-east-1c",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.eksvpc.aws_eip.nat",
            "module.eksvpc.aws_internet_gateway.this",
            "module.eksvpc.aws_subnet.public",
            "module.eksvpc.aws_vpc.this",
            "module.eksvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eksvpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0adc1568d11adcc3b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0df5fb4aea79ae659",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0adc1568d11adcc3b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.eksvpc.aws_eip.nat",
            "module.eksvpc.aws_internet_gateway.this",
            "module.eksvpc.aws_nat_gateway.this",
            "module.eksvpc.aws_route_table.private",
            "module.eksvpc.aws_subnet.public",
            "module.eksvpc.aws_vpc.this",
            "module.eksvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a9f484269ba8d9931080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c96376bc0a4b9365",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a9f484269ba8d993",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.eksvpc.aws_eip.nat",
            "module.eksvpc.aws_internet_gateway.this",
            "module.eksvpc.aws_nat_gateway.this",
            "module.eksvpc.aws_route_table.private",
            "module.eksvpc.aws_subnet.public",
            "module.eksvpc.aws_vpc.this",
            "module.eksvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c35fe983619beffa1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-016154091dc5cd761",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c35fe983619beffa",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.eksvpc.aws_eip.nat",
            "module.eksvpc.aws_internet_gateway.this",
            "module.eksvpc.aws_nat_gateway.this",
            "module.eksvpc.aws_route_table.private",
            "module.eksvpc.aws_subnet.public",
            "module.eksvpc.aws_vpc.this",
            "module.eksvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eksvpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0037607194e8ef441",
            "id": "r-rtb-037cd3c2c3d148af31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-037cd3c2c3d148af3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.eksvpc.aws_internet_gateway.this",
            "module.eksvpc.aws_route_table.public",
            "module.eksvpc.aws_vpc.this",
            "module.eksvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eksvpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0adc1568d11adcc3b",
            "owner_id": "341422841066",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc-private-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cbd7b0146f9cba0d"
          },
          "dependencies": [
            "module.eksvpc.aws_vpc.this",
            "module.eksvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a9f484269ba8d993",
            "owner_id": "341422841066",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc-private-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cbd7b0146f9cba0d"
          },
          "dependencies": [
            "module.eksvpc.aws_vpc.this",
            "module.eksvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c35fe983619beffa",
            "owner_id": "341422841066",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc-private-us-east-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cbd7b0146f9cba0d"
          },
          "dependencies": [
            "module.eksvpc.aws_vpc.this",
            "module.eksvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eksvpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-037cd3c2c3d148af3",
            "owner_id": "341422841066",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc-public",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cbd7b0146f9cba0d"
          },
          "dependencies": [
            "module.eksvpc.aws_vpc.this",
            "module.eksvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eksvpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a34538e03ac0585",
            "route_table_id": "rtb-0adc1568d11adcc3b",
            "subnet_id": "subnet-0c0dbac3ff1fac012"
          },
          "dependencies": [
            "module.eksvpc.aws_route_table.private",
            "module.eksvpc.aws_subnet.private",
            "module.eksvpc.aws_vpc.this",
            "module.eksvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e904228b6d1dc4db",
            "route_table_id": "rtb-0a9f484269ba8d993",
            "subnet_id": "subnet-040ddad471b4e6523"
          },
          "dependencies": [
            "module.eksvpc.aws_route_table.private",
            "module.eksvpc.aws_subnet.private",
            "module.eksvpc.aws_vpc.this",
            "module.eksvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007a9e4f917f51855",
            "route_table_id": "rtb-0c35fe983619beffa",
            "subnet_id": "subnet-01d8b626ec53eff6b"
          },
          "dependencies": [
            "module.eksvpc.aws_route_table.private",
            "module.eksvpc.aws_subnet.private",
            "module.eksvpc.aws_vpc.this",
            "module.eksvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eksvpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab8dcce1b8f71029",
            "route_table_id": "rtb-037cd3c2c3d148af3",
            "subnet_id": "subnet-0f0f9342285f1f04f"
          },
          "dependencies": [
            "module.eksvpc.aws_route_table.public",
            "module.eksvpc.aws_subnet.public",
            "module.eksvpc.aws_vpc.this",
            "module.eksvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d1572f42b491ecd",
            "route_table_id": "rtb-037cd3c2c3d148af3",
            "subnet_id": "subnet-012a957bce57a129f"
          },
          "dependencies": [
            "module.eksvpc.aws_route_table.public",
            "module.eksvpc.aws_subnet.public",
            "module.eksvpc.aws_vpc.this",
            "module.eksvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0669a382351a73d00",
            "route_table_id": "rtb-037cd3c2c3d148af3",
            "subnet_id": "subnet-07376e489f24819db"
          },
          "dependencies": [
            "module.eksvpc.aws_route_table.public",
            "module.eksvpc.aws_subnet.public",
            "module.eksvpc.aws_vpc.this",
            "module.eksvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eksvpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:341422841066:subnet/subnet-0c0dbac3ff1fac012",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0c0dbac3ff1fac012",
            "map_public_ip_on_launch": false,
            "owner_id": "341422841066",
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc-private-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cbd7b0146f9cba0d"
          },
          "dependencies": [
            "module.eksvpc.aws_vpc.this",
            "module.eksvpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:341422841066:subnet/subnet-040ddad471b4e6523",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-040ddad471b4e6523",
            "map_public_ip_on_launch": false,
            "owner_id": "341422841066",
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc-private-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cbd7b0146f9cba0d"
          },
          "dependencies": [
            "module.eksvpc.aws_vpc.this",
            "module.eksvpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:341422841066:subnet/subnet-01d8b626ec53eff6b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-01d8b626ec53eff6b",
            "map_public_ip_on_launch": false,
            "owner_id": "341422841066",
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc-private-us-east-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cbd7b0146f9cba0d"
          },
          "dependencies": [
            "module.eksvpc.aws_vpc.this",
            "module.eksvpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eksvpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:341422841066:subnet/subnet-0f0f9342285f1f04f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-0f0f9342285f1f04f",
            "map_public_ip_on_launch": true,
            "owner_id": "341422841066",
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc-public-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cbd7b0146f9cba0d"
          },
          "dependencies": [
            "module.eksvpc.aws_vpc.this",
            "module.eksvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:341422841066:subnet/subnet-012a957bce57a129f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-012a957bce57a129f",
            "map_public_ip_on_launch": true,
            "owner_id": "341422841066",
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc-public-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cbd7b0146f9cba0d"
          },
          "dependencies": [
            "module.eksvpc.aws_vpc.this",
            "module.eksvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:341422841066:subnet/subnet-07376e489f24819db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.103.0/24",
            "id": "subnet-07376e489f24819db",
            "map_public_ip_on_launch": true,
            "owner_id": "341422841066",
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc-public-us-east-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cbd7b0146f9cba0d"
          },
          "dependencies": [
            "module.eksvpc.aws_vpc.this",
            "module.eksvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eksvpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:341422841066:vpc/vpc-0cbd7b0146f9cba0d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08870ce52ea700525",
            "default_route_table_id": "rtb-0707cb6607f1c0790",
            "default_security_group_id": "sg-0e0e177da4abadc72",
            "dhcp_options_id": "dopt-0c24a341fe1f6be4c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0cbd7b0146f9cba0d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0707cb6607f1c0790",
            "owner_id": "341422841066",
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.my-eks-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:341422841066:security-group/sg-0326f197ad8c7333c",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-0326f197ad8c7333c",
            "ingress": [],
            "name": "my-eks-cluster20201107225412922000000007",
            "name_prefix": "my-eks-cluster",
            "owner_id": "341422841066",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-eks-cluster-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cbd7b0146f9cba0d"
          },
          "dependencies": [
            "module.eksvpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.my-eks-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:341422841066:security-group/sg-0a37cd13845396f4a",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-0a37cd13845396f4a",
            "ingress": [],
            "name": "my-eks-cluster20201107225413030400000008",
            "name_prefix": "my-eks-cluster",
            "owner_id": "341422841066",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-eks-cluster-eks_worker_sg",
              "kubernetes.io/cluster/my-eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cbd7b0146f9cba0d"
          },
          "dependencies": [
            "module.eksvpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.my-eks-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-1205565522",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0326f197ad8c7333c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.eksvpc.aws_vpc.this",
            "module.my-eks-cluster.aws_security_group.cluster"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.my-eks-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-311966665",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0326f197ad8c7333c",
            "self": false,
            "source_security_group_id": "sg-0a37cd13845396f4a",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.eksvpc.aws_vpc.this",
            "module.my-eks-cluster.aws_security_group.cluster",
            "module.my-eks-cluster.aws_security_group.workers"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.my-eks-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-3401681718",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0a37cd13845396f4a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.eksvpc.aws_vpc.this",
            "module.my-eks-cluster.aws_security_group.workers"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.my-eks-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-627794619",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a37cd13845396f4a",
            "self": false,
            "source_security_group_id": "sg-0326f197ad8c7333c",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "module.eksvpc.aws_vpc.this",
            "module.my-eks-cluster.aws_security_group.cluster",
            "module.my-eks-cluster.aws_security_group.workers"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.my-eks-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-1990452870",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a37cd13845396f4a",
            "self": false,
            "source_security_group_id": "sg-0326f197ad8c7333c",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.eksvpc.aws_vpc.this",
            "module.my-eks-cluster.aws_security_group.cluster",
            "module.my-eks-cluster.aws_security_group.workers"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.my-eks-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-2335951238",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0a37cd13845396f4a",
            "self": false,
            "source_security_group_id": "sg-0a37cd13845396f4a",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "module.eksvpc.aws_vpc.this",
            "module.my-eks-cluster.aws_security_group.workers"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}